[package]
name = "rust-rogue"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
rand = "0.8.5"
rand_chacha = "0.3.1"
term_size = "0.3.2"
serial_test = "2.0.0"
termion = "2.0.1"
abstract_game_engine = { path = "../rust-age" }